--- a/scss/object/project/_nav.scss
+++ b/scss/object/project/_nav.scss
@@ -17,6 +17,9 @@
       a {
         text-transform: capitalize;
         font-size: var(--fz-md);
+        &.current {
+          text-decoration: underline;
+        }
       }
     }
   }
